# iotakl

./: .gitignore  README.md  index.html  package-lock.json  package.json
contracts/: Move.toml  README.md
contracts/src/: profile_contract.move  profile_contract_tests.move
notarization/: .gitignore  CONTRIBUTING.md  Cargo.toml  ISSUE_CREDENTIALS.md  README.md  UNIVERSITY_DOCUMENT_NOTARIZATION.md  dprint.json  rustfmt.toml
notarization/.cargo/: audit.toml
notarization/.github/: pull_request_template.md
notarization/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
notarization/.github/actions/iota/keytool/: action.yml
notarization/.github/actions/iota/setup/: action.yml
notarization/.github/actions/publish/rust/: action.yml
notarization/.github/actions/publish/wasm/: action.yml
notarization/.github/actions/rust/sccache/setup/: action.yml
notarization/.github/actions/rust/sccache/stop/: action.yml
notarization/.github/actions/rust/setup/: action.yml
notarization/.github/workflows/: audit.yml  build-and-test.yml  clippy.yml  deploy-move.yml  format.yml  rust-docs.yml  rust-publish.yml  shared-build-wasm.yml  upload-docs.yml  wasm-publish.yml  wasm-retag-npm.yml
notarization/bindings/wasm/: README.md
notarization/bindings/wasm/notarization_wasm/: Cargo.toml  README.md  api-examples.md  api-server.js  package-api.json  package-lock.json  package.json  tsconfig.json  typedoc.json
notarization/bindings/wasm/notarization_wasm/examples/: README.md  tsconfig.web.json
notarization/bindings/wasm/notarization_wasm/examples/src/: 01_create_locked.ts  02_create_dynamic.ts  03_update_dynamic.ts  04_destroy_notarization.ts  05_update_state.ts  06_update_metadata.ts  07_transfer_notarization.ts  08_access_read_only_methods.ts  main.ts  tests.ts  university_document_notarization.ts  util.ts  web-main.ts
notarization/bindings/wasm/notarization_wasm/lib/: index.ts  tsconfig.json  tsconfig.web.json
notarization/bindings/wasm/notarization_wasm/src/: lib.rs  wasm_notarization.rs  wasm_notarization_builder.rs  wasm_notarization_client.rs  wasm_notarization_client_read_only.rs  wasm_time_lock.rs  wasm_types.rs
notarization/examples/: 01_create_locked_notarization.rs  02_create_dynamic_notarization.rs  03_update_dynamic_notarization.rs  04_destroy_notarization.rs  05_update_state.rs  06_update_metadata.rs  07_transfer_dynamic_notarization.rs  08_access_read_only_methods.rs  Cargo.toml  README.md  run.sh
notarization/examples/utils/: utils.rs
notarization/notarization-move/: .prettierrc  Move.toml
notarization/notarization-move/scripts/: notarize.sh  publish_package.sh
notarization/notarization-move/sources/: dynamic_notarization.move  locked_notarization.move  method.move  notarization.move  timelock.move
notarization/notarization-move/tests/: dynamic_notarization_tests.move  locked_notarization_tests.move  notarization_tests.move  timelock_tests.move
notarization/notarization-rs/: Cargo.toml  README.md
notarization/notarization-rs/src/: error.rs  iota_interaction_adapter.rs  lib.rs  package.rs
notarization/notarization-rs/src/client/: full_client.rs  mod.rs  read_only.rs
notarization/notarization-rs/src/core/: builder.rs  mod.rs  move_utils.rs  operations.rs
notarization/notarization-rs/src/core/transactions/: create.rs  destroy.rs  mod.rs  transfer.rs  update_metadata.rs  update_state.rs
notarization/notarization-rs/src/core/types/: event.rs  metadata.rs  mod.rs  notarization.rs  state.rs  timelock.rs
notarization/notarization-rs/tests/e2e/: client.rs  dynamic_notarization.rs  locked_notarization.rs  main.rs
src/: App.tsx  index.css
src/components/credentials/: CredentialViewer.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/pages/: CredentialsPage.tsx  DIDPage.tsx  HomePage.tsx  IssuePage.tsx
src/components/ui/: Logo.tsx
src/components/wallet/: WalletDashboard.tsx
src/data/: credentialData.ts  didData.ts
src/types/: index.ts
