[workspace.package]
authors = ["IOTA Stiftung"]
edition = "2024"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/notarization"
rust-version = "1.85"

[workspace]
resolver = "2"
members = ["examples", "notarization-rs"]
exclude = ["bindings/wasm/notarization_wasm"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bcs = "0.1"
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.2.3" }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.7.0", default-features = false, package = "iota_interaction" }
iota_interaction_rust = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.7.0", default-features = false, package = "iota_interaction_rust" }
iota_interaction_ts = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.7.0", default-features = false, package = "iota_interaction_ts" }
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.7.0", default-features = false, package = "product_common" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false }
strum = { version = "0.27", default-features = false, features = ["std", "derive"] }
thiserror = { version = "2.0", default-features = false }

secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0", default-features = false }
tokio = { version = "1.44.2", default-features = false, features = ["macros", "sync", "rt", "process"] }

[profile.release.package.iota_interaction_ts]
opt-level = 's'
